cambio de nombre de proyecto a Infotrip

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.karendamore.metabile">
+    package="Infotrip">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Metabile">
+        android:theme="@style/Theme.Infotrip">
         <activity
-            android:name=".ListJardinActivity"
+            android:name="com.karendamore.Infotrip.ListJardinActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +20,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegistroJardinActivity"
+            android:name="com.karendamore.Infotrip.RegistroJardinActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.karendamore.Infotrip.MainActivity"
             android:exported="true">
         </activity>
     </application>
