--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,11 @@
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
+    def var = repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+
     }
+    var
 }
-rootProject.name = "Metabile"
+rootProject.name = "Infotrip"
 include ':app'
