--- a/jardin/src/main/AndroidManifest.xml
+++ b/jardin/src/main/AndroidManifest.xml
@@ -2,20 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.karendamore.jardin">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
+        android:fullBackupContent=""
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Infotrip"
-        android:fullBackupContent="">
+        android:theme="@style/Theme.Infotrip">
+        <activity
+            android:name=".drawer.DrawerActivity"
+            android:exported="true"
+            android:label="@string/title_activity_drawer"
+            android:theme="@style/Theme.Infotrip.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".bottom.BottomActivity"
+            android:exported="true"
+            android:label="@string/title_activity_bottom">
+        </activity>
         <activity
             android:name=".main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
