--- a/jardin/src/main/AndroidManifest.xml
+++ b/jardin/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
 
     <application
         android:allowBackup="true"
-        android:fullBackupOnly = "true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -38,7 +37,7 @@
             android:label="@string/title_activity_drawer"
             android:theme="@style/Theme.Infotrip.NoActionBar"/>
         <activity
-            android:name="com.karendamore.jardin.ui.bottom.BottomActivity"
+            android:name="com.karendamore.jardin.ui.bottom.bottom.BottomActivity"
             android:exported="true"
             android:label="@string/title_activity_bottom"/>
         <activity
